--- a/KotlinAndroid/app/build.gradle
+++ b/KotlinAndroid/app/build.gradle
@@ -29,6 +29,7 @@ dependencies {
     compile "com.android.support:recyclerview-v7:$support_version"
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     compile "org.jetbrains.anko:anko-common:$anko_version"
+    compile 'com.google.code.gson:gson:2.2.4'
 
     testCompile 'junit:junit:4.12'
 
